--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = ["PEOL0 <<>>"]
 python = "^3.8"
 alive-progress = "^2.3.1"
 pyfiglet = "^0.8.post1"
+black = "^22.1.0"
 
 [tool.poetry.dev-dependencies]
 
